# llm-calendar

./: .gitignore  README.md  llm_calendar.py  pyproject.toml  python
tests/: test_calendar.py
